# ble-hrm-server

./: .env.sample  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: presentation.md
src/hcm/: bt_client.py  server.py
src/hrm/: bt_client.py  ts_db.py
src/mcp/: bt_client.py  server.py  ts_db.py
tests/mcp/: test_bt_client.py  test_ts_db.py
